Testing is icons working

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,17 @@
   <title>Restaurant page</title>
 </head>
 <body>
-  <h1>boiler plate</h1>
+  <header>
+    <nav>
+      <button>Home</button>
+      <i class="bx bx-envelope"></i>
+      <button>Menu</button>
+      <button>Personnel</button>
+
+    </nav>
+  </header>
+  <main>
+
+  </main>
 </body>
 </html>
